[package]
name = "bevy_mapengine"
version = "0.0.3"
authors = ["Matthew Miller <mattdm@mattdm.org>"]
publish = false
repository = "https://github.com/mattdm/bevy_mapengine"
edition = "2018"
keywords = ["game", "engine", "bevy", "tiles", "tilemap", "2d"]
categories = ["game-development", "graphics"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.4", default-features = false, features = ["bevy_winit","bevy_wgpu","render","png","hdr","x11"] }
